Closed
Bug 922515
Opened 12 years ago
Closed 12 years ago
The italic text appears more sloped
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
mozilla28
People
(Reporter: over68, Assigned: mattwoodrow)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.39 KB,
patch
|
bas.schouten
:
review+
bajaj
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Disable hardware acceleration.
2. Restart Firefox.
3. Go to page, for example Arabic italic, https://dl.dropboxusercontent.com/u/95157096/85f61cf7/poz82cb7.html
Actual results:
The italic text appears more sloped with HWA disabled.
Screenshot: http://img28.imageshack.us/img28/750/1jez.png
Also happens with other languages, for example, https://dl.dropboxusercontent.com/u/95157096/85f61cf7/c53wfz58.html
Screenshot: http://img703.imageshack.us/img703/1271/eiu0.png
Updated•12 years ago
|
Blocks: 907926
Status: UNCONFIRMED → NEW
tracking-firefox27:
--- → ?
Component: General → Graphics
Ever confirmed: true
Keywords: regression
Comment 1•12 years ago
|
||
Comment 2•12 years ago
|
||
Matt, can you please help here as this sounds like a regression from 907926.
| Assignee | ||
Comment 3•12 years ago
|
||
This is a bit gross.
I wanted to un-apply the matrix within DrawTargetCairo, but you can't modify the transform on cairo_scaled_font.
Attachment #825043 -
Flags: review?(bas)
Comment 4•12 years ago
|
||
Comment on attachment 825043 [details] [diff] [review]
Don't skew twice for cairo fonts
Review of attachment 825043 [details] [diff] [review]:
-----------------------------------------------------------------
I guess it'll have to do.
Attachment #825043 -
Flags: review?(bas) → review+
| Assignee | ||
Comment 5•12 years ago
|
||
Comment 6•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
| Assignee | ||
Comment 7•12 years ago
|
||
Comment on attachment 825043 [details] [diff] [review]
Don't skew twice for cairo fonts
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 907926
User impact if declined: Double italic on some fonts
Testing completed (on m-c, etc.): Been on m-c for a while
Risk to taking this patch (and alternatives if risky): Very low risk.
String or IDL/UUID changes made by this patch: None
Attachment #825043 -
Flags: approval-mozilla-aurora?
Updated•12 years ago
|
Attachment #825043 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•12 years ago
|
||
status-firefox28:
--- → fixed
Comment 9•12 years ago
|
||
Verified as fixed with latest Aurora (build ID: 20131121004004) on Win 7 64-bit.
QA Contact: manuela.muntean
Comment 10•12 years ago
|
||
Also verified with latest Nightly, W7 64-bit, build ID: 20131121030201
You need to log in
before you can comment on or make changes to this bug.
Description
•