Bug 922515 - Don't apply a skew matrix to the DT when it's cairo, since we use the cairo font with it already applied. r=Bas

--HG--
extra : rebase_source : 289ed3a9e02bd5499b49aa1181dd35bf16eba5d3